# OpenTorus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design_proposal.yml  feature_request.yml
.github/workflows/: lint.yml  tests.yml
docs/: architecture.md  artifact-model.md  cli-ux.md  design-problem-model.md  privacy.md  roadmap.md  safety.md
examples/: README.md
examples/backward-error-convergence/: README.md  minberr_backward_error.sh
examples/matrix-functions/: README.md  matrix_functions_open_problems.sh  notes.md
examples/matrix-sign-approximation/: README.md  sign.sh
examples/nystrom-submodularity/: README.md  nystroem_submodularity.sh
examples/polynomial-hirsch/: README.md  poly_hirsch_sota.sh
examples/random-nla/: README.md  adaptive_sketch_size.sh
examples/simons-eigenvalue-problems/: README.md  notes.md  simons_open_problems.sh
examples/simons-eigenvalue-problems/scripts/: cg_vs_rcd.py  compare_patterns.py  condition_decay.py  condition_experiment.py  condition_scaling.py  gap_experiment.py  ritz_sweep.py  run_cg_rcd_sweep.py  test_gap.py  test_gap_patterns.py  test_ramp_gap.py  test_ritz_conditioning.py
examples/tensor-concentration/: README.md  tensor_concentration.sh
images/: README.md
prompts/: referee.md
src/opentorus/: __init__.py  __main__.py  actions.py  approvals.py  atomicio.py  bundle.py  completion.py  config.py  default_config.yaml  doctor.py  dotenv.py  errors.py  governance.py  jsonl.py  mathtext.py  notifications.py  paths.py  privacy.py  quality.py  repl.py  replhistory.py  suggest.py  textnorm.py  usage.py  ux.py  workspace.py
src/opentorus/agent/: __init__.py  compaction.py  context.py  executor.py  inventory.py  literature_gate.py  loop.py  planner.py  prompts.py  prove_gate.py  prove_harvest.py  prove_loop.py  replay.py  research_loop.py  review.py  run_state.py  run_summary.py  session.py  task_bootstrap.py  task_validation.py  verify.py
src/opentorus/cli/: __init__.py  _base.py  check_algebra.py  checkpoint.py  claim.py  completion.py  config.py  data.py  env.py  eval_.py  evidence.py  exp.py  gov.py  graph.py  index.py  journal.py  kb.py  lit.py  memory.py  pack.py  paper.py  patch.py  problem.py  proof.py  replay.py  repo.py  review.py  root.py  task.py
src/opentorus/evals/: __init__.py  golden.py  harness.py  suites.py
src/opentorus/execution/: __init__.py  backends.py  (+7 more)
tests/: conftest.py  mcp_stub_server.py  test_actions.py  test_active_problem.py  test_agent_loop.py  test_algebra_check.py  test_amnesia_fixes.py  test_approvals.py  test_attribution_and_citation_memory.py  test_bundle.py  test_chat_only_recovery.py  test_check.py  test_checkpoints.py  test_citation_and_replay.py  test_claim_ledger.py  test_claims.py  test_code_evidence.py  test_compaction.py  test_completion.py  test_config.py  test_context_compaction.py  test_context_selection.py  test_cost_and_interrupt.py  test_dashboard_explain.py  test_dataset_connectors.py  test_doctor.py  test_dossier.py  test_dossier_cli.py  test_dossier_export.py  test_dossier_validated_numerics.py  test_dotenv.py  test_durability.py  test_egress.py  test_embeddings.py  test_env_prepare.py  test_epistemics_single_source.py  test_evals.py  test_evidence.py  test_execution_backends.py  test_executor.py  (+106 more)
tests/golden/: help.txt  mock-fallback.txt  unknown-command.txt
(+101 files in other folders)
