[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentorus"
dynamic = ["version"]
description = "A local-first, terminal-native AI agent for open mathematical problems."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "OpenTorus Contributors" }]
keywords = ["ai", "agent", "cli", "research", "engineering", "local-first"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
# Backward-compatible alias; pypdf is included in core dependencies.
papers = ["pypdf>=4.0"]
embeddings = ["sentence-transformers>=2.2"]
# Validated numerics: rigorous interval-arithmetic verification of inequalities.
validated-numerics = ["mpmath>=1.3"]
dev = [
    "pytest>=8.0",
    # Pin ruff exactly: its formatter output changes between releases, so an
    # unpinned version makes `ruff format --check` non-reproducible across CI
    # and contributors.
    "ruff==0.15.17",
    "mypy~=2.1",
    "types-PyYAML",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/maximilianbehr/OpenTorus"
Repository = "https://github.com/maximilianbehr/OpenTorus"
Issues = "https://github.com/maximilianbehr/OpenTorus/issues"

[project.scripts]
opentorus = "opentorus.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opentorus = [
    "default_config.yaml",
    "research/dossier/templates/preprint.cls",
    "research/dossier/templates/PREPRINT-LICENSE.txt",
]

# Single-source the version from opentorus.__version__ so pyproject and the
# package can never drift.
[tool.setuptools.dynamic]
version = { attr = "opentorus.__version__" }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Example workflows are real, illustrative research scripts (multiple imports per
# line, lambdas, long expressions) — not library code, so they are not lint-gated.
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer declares CLI parameters as defaults, e.g. `x: str = typer.Option(...)`;
# these are the framework's idiom, not mutable-default bugs, so allow them (B008).
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.11"
files = ["src/opentorus"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests that need a live external service (e.g. a running Ollama
# server) are deselected by default so a bare ``pytest`` stays offline and
# deterministic. Run them explicitly with ``pytest -m integration``.
addopts = "-q -m 'not integration'"
markers = [
    "integration: requires a live external service (network/server); opt in with -m integration",
]
